...
    weak var gameSettingsSelectionDelegate: GameSettingsSelectionDelegate!
    var settings: DartGameSettings = DartGameSettings()

    override func viewDidLoad() {
        super.viewDidLoad()
        view.backgroundColor = UIColor.black
        view.accessibilityIdentifier = "gameSettingsView"
        
//        let backgroundImageView = UIImageView(image: UIImage(named: "dartboard.jpg"))
//        backgroundImageView.frame = view.frame
//        backgroundImageView.contentMode = .scaleAspectFill
//        backgroundImageView.clipsToBounds = true
//        self.view.addSubview(backgroundImageView)
...
        playerCountSwitchLabel.leftAnchor.constraint(equalTo: playerCountSwitch.leftAnchor, constant: 20).isActive = true
        playerCountSwitchLabel.bottomAnchor.constraint(equalTo: playerCountSwitch.topAnchor).isActive = true
        playerCountSwitchLabel.widthAnchor.constraint(equalTo: playerCountSwitch.widthAnchor).isActive = true
        
        
        
        let startLocalGameButton = DMCustomControlsFactory.createButton(withTitle: "Start local game", withWidthInPercent: 0.7)
        startLocalGameButton.addTarget(self, action: #selector(startLocalGame), for: .touchUpInside)
        self.view.addSubview(startLocalGameButton)

        startLocalGameButton.centerXAnchor.constraint(equalTo: view.centerXAnchor).isActive = true
        startLocalGameButton.bottomAnchor.constraint(equalTo: view!.bottomAnchor, constant: -view!.bounds.height * 0.2).isActive = true
        
...
