...
        collectionView?.accessibilityIdentifier = "dashboardView"
        collectionView?.register(DartGameCell.self, forCellWithReuseIdentifier: customCellID)
        print(games)
        
        addNavBarImage()
        self.navigationItem.rightBarButtonItem = UIBarButtonItem(barButtonSystemItem: .add, target: self, action: #selector(startGame))
        navigationItem.rightBarButtonItem?.accessibilityIdentifier = "startNewGameButton"
    }
    
    override func viewDidAppear(_ animated: Bool) {
        collectionView?.reloadData()
    }
    
...
